Updated_new_Code/new_code/YAML/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vrit
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /middleware
        pathType: Prefix
        backend:
          service:
            name: middleware
            port:
              number: 8080
      - path: /listener
        pathType: Prefix
        backend:
          service:
            name: listener
            port:
              number: 8081
